--- a/WEBDEV_Task1-Calculator/style.css
+++ b/WEBDEV_Task1-Calculator/style.css
@@ -6,7 +6,6 @@ body {
   font-family: "Poppins";
   background-color: #535353;
   overflow: hidden;
-  overflow-y: auto;
 }
 .button {
   width: 69px;
@@ -18,7 +17,7 @@ body {
   font-size: 30px;
 }
 
-.button:active{
+.button:hover{
   border: 4px solid rgb(0, 255, 149);
 }
 
@@ -27,7 +26,7 @@ body {
   color: white;
   font-size: 35px;
 }
-.diffcolor:active {
+.diffcolor:hover {
   background-color: rgb(0, 255, 149);
 }
 
